--- a/assets/css/lcstyle.css
+++ b/assets/css/lcstyle.css
@@ -3,5 +3,11 @@ body{
     background-image: url("http://www.megalithicireland.com/Tipperary/Lackeen%20Castle,%20Tipperary%20002s.jpg") no repeat center center;
     background-color: aqua;
     background-size: cover;
-    height: auto;
+    height: 500px;
+}
+#logo {
+    float: left;
+    font-size: 200%;
+    margin-left: 30px;
+    margin-top: 100px;
 }
