--- a/assets/css/lcstyle.css
+++ b/assets/css/lcstyle.css
@@ -11,3 +11,11 @@ body{
     margin-left: 30px;
     margin-top: 100px;
 }
+.castle-background 
+{clear:left;
+    background: url("../images/lackeencastle4.jpg");
+    background-size: cover;
+    background-position: center;
+    height: 500px;
+
+}
