style navigation bar and background color of homepage

--- a/assets/css/lcstyle.css
+++ b/assets/css/lcstyle.css
@@ -2,14 +2,14 @@ body{
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     color: bisque;
     background-image: url("http://www.megalithicireland.com/Tipperary/Lackeen%20Castle,%20Tipperary%20002s.jpg") no repeat center center;
-    background-color: aqua;
+    background-color: #00008B;
     background-size: cover;
     height: 500px;
 
 }
 #logo {
     float: left;
-    color: dimgray;
+    color: inherit;
     font-size: 200%;
     margin-left: 30px;
     margin-top: 100px;
@@ -21,4 +21,26 @@ body{
     background-position: center;
     height: 900px;
 
+}
+#menu {
+    letter-spacing: 2px;
+    font-size: 120%;
+}
+
+#menu, #logo {
+    line-height: 75px;
+}
+#menu a {
+    text-decoration: none;
+    color: inherit;
+}
+#menu a:hover {
+    border-bottom: 2px solid red; 
+}
+
+#menu li {
+
+float: right;
+list-style-type: none;
+ margin-right:30px ;
 }
