--- a/assets/css/lcstyle.css
+++ b/assets/css/lcstyle.css
@@ -51,3 +51,12 @@ float: right;
 list-style-type: none;
  margin-right:30px ;
 }
+
+.active {
+    border-bottom: 2px solid red;
+}
+#about-lackeen {
+    color: #00008b;
+    background-color: bisque;
+    background: transparent;
+}
