--- a/assets/css/lcstyle.css
+++ b/assets/css/lcstyle.css
@@ -17,9 +17,9 @@ body {
     color: inherit;
     color: bisque;
     font-family: Eczar, Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 300%;
+    font-size: 400%;
     margin-left: 30px;
-    margin-top: 100px;
+    margin-top: 50px;
     text-transform: uppercase;
 }
 
@@ -63,17 +63,17 @@ body {
 .castle-background {
     clear: left;
     background: url("../images/lackeencastle6.jpg");
-    background-size: inherit;
+    background-size: cover;
     background-position: center;
     height: 800px;
     width: 800px;
     border-radius: 50%;
-    margin: 30px;
+    margin: auto;
 
 }
 
 #about-lackeen {
-    color: #00008b;
+    color: rgb(11, 8, 164, 0.6)
     background-color: bisque;
     background: transparent;
 }
