add footer to home page

--- a/assets/css/lcstyle.css
+++ b/assets/css/lcstyle.css
@@ -69,5 +69,26 @@ body {
   
 
 }
+footer {
+    height: 150px;
+}
 
+.social-networks {
 
+    text-align: center;
+
+}
+
+.social-networks  > li{
+
+    display: inline;
+}
+
+.social-networks {
+
+    font-size: 160%;
+    margin: 1%;
+    padding: 5%;
+    color: inherit;
+    
+}
