--- a/assets/css/lcstyle.css
+++ b/assets/css/lcstyle.css
@@ -57,7 +57,12 @@ body {
     border-bottom: 2px solid red;
 }
 
-
+h2 {
+    margin-left: 30px;
+    padding: auto;
+    border-bottom: 2px solid bisque;
+    text-transform: uppercase;
+}
 
 
 .castle-background {
@@ -69,6 +74,25 @@ body {
   
 
 }
+#location{
+    height: 100px;
+}
+
+#map {
+
+    padding-top: 20px;
+    width: 50%;
+    float: left;
+}
+
+#directions {
+    padding-top: 30px;
+    width: 50%;
+    float: right;
+}
+
+/* footer*/
+
 footer {
     height: 150px;
 }
