--- a/assets/css/lcstyle.css
+++ b/assets/css/lcstyle.css
@@ -96,16 +96,23 @@ h2 {
 
 }
 /* Kennedy photos*/
-#kennedy-pics {
+.kennedy-pics {
+    margin: 5px;
+    border: 1px solid bisque;
+    float: left;
+    width : 180px;
     
-    width :30%;
-    height: auto;
-    position: center;
 
 }
-#kennedy-pics > img {
+.kennedy-pics > img {
     width: 100%;
+    height: auto;
 
+}
+figcaption .desc {
+
+    padding: 15px;
+    text-align: center;
 }
 /*location*/
 
