fix positions of Kennedy pictures , map and footer

--- a/assets/css/lcstyle.css
+++ b/assets/css/lcstyle.css
@@ -8,7 +8,7 @@ body {
 
     background-color: #00008B;
     background-size: cover;
-    height: 900px;
+    height: 1400px;
 
 }
 
@@ -17,10 +17,10 @@ body {
     color: inherit;
     color: bisque;
     font-family: Eczar, Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 400%;
+    font-size: 300%;
     margin-left: 30px;
     margin-top: 5px;
-    margin-bottom: 5px;
+    mar4in-bottom: 5px;
     text-transform: uppercase;
     letter-spacing: 4px;
 }
@@ -38,7 +38,7 @@ body {
 #menu,
 #logo {
 
-    list-style-type: none;
+    
     margin-right: 30px;
 }
 
@@ -62,16 +62,30 @@ body {
     border-bottom: 2px solid red;
 }
 /* Summary information*/
+#summary-outer {
+    height: 750px;
+    width:100%;
+    overflow:hidden;
+    position:relative;
+}
+
+.castle-background {
+    clear: left;
+    background: url("../images/lackeen-castle-view.jpg");
+    background-size: cover;
+    background-position: center;
+    height: 600px;
+
 #info-text {
 
-    font-size: 100%;
+    font-size: 110%;
     font-family: PT+ Serif, serif;
 padding-left: 30px;
-padding-top: 50px;
+padding-top: 30px;
     
    
     height: 500px;
-    width: 600px;
+    width: 48%;
 
     background-color: rgba(107, 102, 102, 0.7); 
 
@@ -81,35 +95,55 @@ padding-top: 50px;
 h2 {
     margin-left: 30px;
     padding: auto;
-
+font-size: 200%;
     text-transform: uppercase;
+}
+    
+
+
+   
+
+}
+
+/* OKennedy informaiton*/
+#okennedy{
+    height: 300px;
+    width:100%;
+    margin (0,auto);
 }
 
 
-.castle-background {
-    clear: left;
-    background: url("../images/lackeen-castle-view.jpg");
-    background-size: cover;
-    background-position: center;
-    height: 600px;
-  
+#okennedy-info {
+    font-size: 100%;
+    font-family: PT+ Serif, serif;
+padding-left: 30px;
+padding-top: 50px;
+    font-size: 110%;
+   margin: (0 auto);
+    height: 300px;
+    width: 75%;
+
+   
+
+    position: relative;
 
 }
 /* Kennedy photos*/
 .kennedy-pics {
-    margin: 5px;
+    margin: 30px;
     border: 1px solid bisque;
     float: left;
-    width : 180px;
-    
+    width : 25%;
+    display: inline;
+   
 
 }
 .kennedy-pics > img {
     width: 100%;
-    height: auto;
+    height: 400px;
 
 }
-figcaption .desc {
+.desc {
 
     padding: 15px;
     text-align: center;
@@ -117,20 +151,24 @@ figcaption .desc {
 /*location*/
 
 #location{
-    height: 80px;
+    float:left;
+    height: 400px;
+    width:100%;
 }
 
 #map {
-
-    padding-top: 30px;
-    width: 40%;
+margin-left: 30px;
+    padding-top: 10px;
+    width: 50%;
     float: left;
+   
 }
 
 #directions {
-    padding-top: 30px;
-    width: 40%;
+    padding: 0 auto;
+    width: 45%;
     float: right;
+    font-size: 110%;
 }
 
 /* footer*/
@@ -143,6 +181,7 @@ footer {
     color: #fff;
 background-color: #00008B;
 text-align: center;
+    height: 20 px;
     
 }
 
@@ -161,7 +200,7 @@ text-align: center;
 
     font-size: 160%;
     margin: 1%;
-    padding: 5%;
+    padding: 0 auto;
     color: inherit;
     
 }
