--- a/assets/css/lcstyle.css
+++ b/assets/css/lcstyle.css
@@ -147,13 +147,40 @@ font-size: 200%;
     text-transform: uppercase;
 }
     
-
-
-   
-
+#jfk-pic
+{
+    
+    width: 33%;
+    float:left;
+}
+#eunice-pic {
+    margin-bottom: 20px;
+    width: 33%;
+    float: left;
+}
+#center-about{ 
+    padding-top: 30px;
+    width:33%;
+margin: 0 auto;
+}
+.circle-container {
+    width: 200px;
+    height: 200px;
+    padding:30px;
+    margin: 0 auto;
+    border: 1px solid bisque;
+    border-radius: 50%;
 }
 
-/* OKennedy informaiton*/
+   #circle-cover-jfk {
+       background: url('../images/jfk.jpg')no repeat center center;
+       height:200px;
+       border-radius: 50%;
+   }
+
+
+
+/* OKennedy informaiton
 #okennedy{
     height: 300px;
     width:100%;
@@ -176,7 +203,7 @@ padding-top: 50px;
     position: relative;
 
 }
-/* Kennedy photos*/
+/* Kennedy photos
 .kennedy-pics {
     margin: 30px;
     border: 1px solid bisque;
@@ -194,8 +221,7 @@ padding-top: 50px;
 .desc {
 
     padding: 15px;
-    text-align: center;
-}
+    text-align: center;*/
 /*location*/
 
 #location{
