--- a/assets/css/lcstyle.css
+++ b/assets/css/lcstyle.css
@@ -287,8 +287,8 @@ padding-top: 50px;
 /*location*/
 
 #location {
-    height: 350px;
-    margin: 50px auto;
+    height: 400px;
+    margin: 30px auto;
 
     width: 100%;
 }
@@ -296,7 +296,7 @@ padding-top: 50px;
 #visit-intro {
     text-align: center;
     margin: 0 auto;
-
+    padding-bottom: 20px;
     font-size: 200%;
     text-transform: uppercase;
 }
@@ -304,7 +304,7 @@ padding-top: 50px;
 
 #map {
     margin-left: 30px;
-    padding: 5px auto 30px auto;
+    padding: 50px auto 30px auto;
     width: 45%;
 
     float: left;
@@ -415,25 +415,26 @@ footer {
 
     #info-text {
 
-        font-size: 110%;
+        font-size: 100%;
         font-family: eczar, serif;
+        font-weight:100;
         text-transform: uppercase;
 
         text-align: center;
 
-        padding: 20px auto;
+        padding: 0 auto;
 
 
-        height: 200px;
-        width: 45%;
+        height: 300px;
+        width: 50%;
 
-        bottom: 80px;
-        left: 30px;
+        bottom: 130px;
+        left: 20px;
 
         background-color: rgba(94, 36, 36, 0.7);
 
         position: absolute;
-        border: 1px solid bisque;
+        border: 2px solid bisque;
         border-radius: 50%;
     }
 
@@ -441,58 +442,155 @@ footer {
 
         padding-top: 20px;
     }
-    #summary-outer, #castle-background {
-    height: 400px;
+
+    #summary-outer,
+    #castle-background {
+        height: 400px;
     }
 
-    #lackeen-summary{
+    #lackeen-summary {
         width: 80%;
         height: 1050px;
-        margin:0 auto;
-        
+        margin: 0 auto;
+
 
     }
 
-    #lackeen-intro{
+    #lackeen-intro {
         padding: 30px 0;
-        margin:0;
-        
+        margin: 0;
+
     }
-    #left-about, #right-about{
+
+    #left-about,
+    #right-about {
 
         width: 100%;
         float: left;
         padding: 0;
-        
-        
+
+
     }
 
-    .left-about-heading h2, .right-about-heading h2 {
-        text-align:justify;
-        padding:0 auto;
+    .left-about-heading h2,
+    .right-about-heading h2 {
+        text-align: justify;
+        padding: 0 auto;
     }
-    .left-about-heading p, .right-about-heading p {
+
+    .left-about-heading p,
+    .right-about-heading p {
         width: 100%;
         text-align: justify;
-        padding:0 auto;
+        padding: 0 auto;
     }
-    hr { 
+
+    hr {
         display: none;
     }
-    #center-about{
-        clear:both;
-        width:100%;
+
+    #center-about {
+        clear: both;
+        width: 100%;
         height: 150px;
-        padding:0;
+        padding: 0;
 
     }
 
     #directions {
         font-size: 100%;
     }
-    /*#lackeen-summary { 
+}
+
+/* media queries for screens 425px and lower*/
+
+/* hamburger menu TODO*/
+@media screen and (max-width:425px ) {
+
+
+
+    #info-text {
+
+        font-size: 100%;
+        font-family: eczar, serif;
+
+        font-weight: 100;
+        text-transform: uppercase;
+        text-align: center;
+
+        padding: 0 auto;
+
+        height: 300px;
+        width: 50%;
+
+        bottom: 130px;
+        left: 20px;
+
+        background-color: rgba(94, 36, 36, 0.7);
+
+        position: absolute;
+        border: 2px solid bisque;
+        border-radius: 50%;
+    }
+
+    #summary-outer #castle-background {
+        height: 300px;
+    }
+
+    #lackeen-summary {
+        height: 1100px;
+    }
+
+    #lackeen-intro,
+    #visit-intro {
+        font-size: 120%;
+        text-transform: capitalize;
+        font-family: eczar, serif;
+        font-weight: 400;
+
+
+    }
+
+
+
+
+    .left-about-heading h2,
+    .right-about-heading h2 {
+
+        font-size: 110%;
+        text-transform: capitalize;
+        font-family: eczar, serif;
+        font-weight: 300;
+
+    }
+
+    hr {
+        border-top: 1px solid bisque;
+        width: 100%;
+        margin: 5px 0;
+    }
+
+    #location {
+        height: 600px;
+    }
+
+    #map,
+    #directions {
+        width: 100%;
+        margin-left: 5px;
+        padding: 0 auto;
+
+    }
+
+    #directions {
+        text-align: center;
+    }
+}
+
+/*#lackeen-summary { 
         width : 90%;
         height:1200px;
+
         margin:0 auto;
 
     }
@@ -509,4 +607,3 @@ footer {
         text-align: center;
         padding:0 20px;
     }*/
-}
