--- a/assets/css/lcstyle.css
+++ b/assets/css/lcstyle.css
@@ -321,7 +321,17 @@ padding-top: 50px;
     height: 300px;
 
 }
+/*end location*/
 
+/*Contact form*/
+/*.castle-background-form {
+    clear: left;
+    background: url("../images/lackeen-castle-view.jpg");
+    background-size: cover;
+    background-position: center;
+    height: 00px;
+    width: 100%;
+}*/
 
 /* footer*/
 
@@ -607,3 +617,49 @@ footer {
         text-align: center;
         padding:0 20px;
     }*/
+    /*FORM*/
+
+    .form-section { 
+        clear: left;
+        background: url('../images/lackeen-castle-view.jpg');
+        background-size: cover;
+        background-position: center;
+    height: 900px;
+    }
+
+    .contact-form
+    {
+        margin:120px 10% 30px 0;
+        color:bisque;
+        background-color: rgba(94, 36, 36, 0.7);
+        max-width: 400px;
+        position: absolute;
+        left:10%;
+        padding:30px;
+    }
+    .contact-form >h2 {
+        color: bisque;
+        margin-bottom: 20px;
+    }
+
+    .text-input {
+        background: transparent;
+        color: #00008B;
+        width:100%;
+        height:25px;
+        margin: 5px 0 20px 0;
+        border :1px solid bisque;
+        border-radius: 5px;
+    }
+.text-input:hover {
+    border-color: bisque;}
+.join-button {
+    margin-top:20px;
+    border-radius: 5px;
+    padding:15px 32 px 15px 32px;
+    text-align:center;
+    font-size: 100%;
+    background-color: darkred;
+    color: bisque;
+    display: block;
+}
