--- a/assets/css/lcstyle.css
+++ b/assets/css/lcstyle.css
@@ -645,7 +645,7 @@ footer {
 
     .contact-form
     {
-        margin:120px 10% 30px 0;
+        margin: 80px 20% 30px 0;
         color:bisque;
         background-color: rgba(94, 36, 36, 0.7);
         max-width: 400px;
@@ -660,22 +660,34 @@ footer {
 
     .text-input {
         background: transparent;
-        color: #00008B;
+        color: bisque;
         width:100%;
         height:25px;
         margin: 5px 0 20px 0;
-        border :1px solid bisque;
+        border :2px solid bisque;
         border-radius: 5px;
     }
 .text-input:hover {
     border-color: bisque;}
 .join-button {
     margin-top:20px;
-    border-radius: 5px;
-    padding:15px 32 px 15px 32px;
+    border-radius: 2px;
+    padding:15px 32px 15px 32px;
     text-align:center;
     font-size: 100%;
-    background-color: darkred;
+    background-color: rgb(0, 0, 139, 0.7);
     color: bisque;
     display: block;
 }
+
+/*#last-word {
+    
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+ color: #00008b;
+    background-color: bisque;
+    text-align: center;
+    height: 50px;
+}*/
